--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,10 @@
 :root {
   --color-black: #000000;
   --color-black-transparent: rgba(0, 0, 0, 0.25);
+  --color-black-transparent-300: rgba(0, 0, 0, 0.3);
   --color-black-light-transparent: rgba(0, 0, 0, 0.4);
+  --color-gray-transparent: rgba(0, 1, 1, 0.1);
+  --color-white-transparent: rgba(255, 255, 255, 0.3);
   --color-white: #FFFFFF;
   --color-pink-100: #FB565A;
   --color-pink-200: #E74246;
@@ -148,6 +151,7 @@ img {
 
 .main-header-logo {
   width: 160px;
+  flex-shrink: 0;
 }
 
 .site-nav a, .cart-link {
@@ -228,6 +232,8 @@ img {
 
 .button:active {
   background-color: var(--color-pink-300);
+  color: var(--color-white-transparent);
+  box-shadow: inset 0px 3px 0px var(--color-gray-transparent);
 }
 
 /* Slider */
@@ -522,15 +528,15 @@ img {
   list-style: none;
   margin: 0;
   padding: 0;
-  position: relative;
 }
 
 .partner-item {
   display: flex;
   width: 25%;
   height: 110px;
-  margin: 40px auto 30px;
+  margin: 40px 0 30px;
   line-height: 0;
+  position: relative;
 }
 
 .partner-item+.partner-item::before {
@@ -539,8 +545,13 @@ img {
   position: absolute;
   width: 2px;
   height: 52px;
-  top: 55px;
+  top:25%;
+  top: calc(50% - 26px);
   background-color: var(--color-gray-100);
+}
+
+.partner-item:nth-child(4n-3)::before {
+  display: none;
 }
 
 .partner-item a {
@@ -887,7 +898,8 @@ img {
 
 .template-item>a {
   width: 100%;
-  border: 1px solid var(--color-gray-100)
+  border: 1px solid var(--color-gray-100);
+  border-radius: 0px 0px 5px 5px;
 }
 
 .template-item:hover>a {
@@ -915,6 +927,7 @@ img {
   max-width: 100%;
   height: auto;
   object-fit: contain;
+  border-radius: 0px 0px 4px 4px;
 }
 
 .template-item:hover img {
@@ -928,6 +941,7 @@ img {
   position: absolute;
   width: 360px;
   min-height: 231px;
+  max-height: 100%;
   bottom: 0;
   border-radius: 0px 0px 5px 5px;
   opacity: 0;
@@ -949,14 +963,12 @@ img {
 }
 
 .template-description p {
-  display: inline-block;
-  vertical-align: middle;
   text-align: center;
   font-size: 16px;
   line-height: 18px;
   color: var(--color-gray-550);
-  padding: 12px 0 32px 0;
-  margin: 0;
+  margin: 12px 0 32px;
+  overflow-y: auto;
 }
 
 .template-description .button {
@@ -989,6 +1001,7 @@ img {
   text-transform: uppercase;
   font-size: 16px;
   line-height: 18px;
+  font-weight: 500;
   padding: 14px 17px 12px 17px;
   display: block;
   border-radius: 3px;
@@ -1003,13 +1016,22 @@ img {
 }
 
 .pagination-link:active {
+  color: var(--color-black-transparent-300);
   background-color: var(--color-gray-400);
-  border: 3px solid var(--color-gray-400);
+  border: none;
+  padding: 17px 20px 15px 20px;
+  box-shadow: inset 0px 3px 0px var(--color-gray-transparent);
 }
+
 
 .pagination-item:last-child .pagination-link {
   padding: 14px 76px 12px 76px;
 }
+
+.pagination-item:last-child .pagination-link:active {
+  padding: 17px 79px 15px 79px;
+}
+
 
 .pagination-item-active .pagination-link {
   border-color: var(--color-gray-450);
@@ -1116,6 +1138,11 @@ img {
 
 .social-item:active {
   background-color: var(--color-pink-300);
+  box-shadow: inset 0px 3px 0px var(--color-gray-transparent);
+}
+
+.social-item:active::before {
+  opacity: 0.3;
 }
 
 .social-item::before {
@@ -1124,7 +1151,7 @@ img {
   height: 30px;
   background-repeat: no-repeat;
   background-position: center;
-}
+  }
 
 .vk::before {
   background-image: url(../img/icon/vk-icon.svg);
@@ -1318,13 +1345,23 @@ img {
 }
 
 @keyframes shake {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateX(0);
   }
-  10%, 30%, 50%, 70%, 90% {
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
     transform: translateX(-10px);
   }
-  20%, 40%, 60%, 80% {
+
+  20%,
+  40%,
+  60%,
+  80% {
     transform: translateX(10px);
   }
 }
